@@ -26,12 +26,13 @@ cdef class HilbertArray:
     cpdef _get_row_col_spaces(self, row_space=*, col_space=*)
     cpdef diag(self)
     cpdef as_np_matrix(self, dtype=*, row_space=*, col_space=*)
-    cpdef np_matrix_transform(self, f, transpose_dims=*)
+    cpdef np_matrix_transform(self, f, transpose_dims=*, row_space=*, col_space=*)
     cpdef det(self)
     cpdef fill(self, val)
     cpdef norm(self)
     cpdef normalize(self)
     cpdef normalized(self)
+    cpdef inv(self, row_space=*)
     cpdef conj(self)
     cpdef svd(self, full_matrices=*, inner_space=*)
     cpdef svd_list(self, row_space=*, col_space=*, thresh=*)
